--- a/EDA_PsA.Rmd
+++ b/EDA_PsA.Rmd
@@ -138,6 +138,7 @@ str(clean_one)
 names(clean_one)
 class(clean_one)
 ```
+
 ```{r}
 #subset by Event_Name
 EN <- split(clean_one, clean_one$Event_Name)
@@ -152,13 +153,17 @@ lapply(seq_along(EN), function(x) {
 ```
 
 ```{r}
+as.tibble(Fac_only_B)
+```
+
+```{r}
 #feature selection B -- for joint count
 library(leaps)
 B$Joint_Count <- as.factor(B$Joint_Count)
 FAC<- sapply(B, function(x) is.factor(x))
 Fac_only_B <- B[, FAC]
 Fac_only_B_1 <- which(sapply(Fac_only_B, function(x) length(unique(x))<2)) # see which factor has only one level
-Fac_only_B_EN <- Fac_only_B[,3:68]
+Fac_only_B_EN <- Fac_only_B[,4:67]
 
 str(Fac_only_B_EN)
 Fac_only_B_EN_non1 <-Fac_only_B_EN[, sapply(Fac_only_B_EN, nlevels) > 1]
@@ -166,7 +171,23 @@ str(Fac_only_B_EN_non1)
 #fit <- regsubsets(Joint_Count_F ~., Fac_only_B_EN_non1,  nvmax=19,	method="forward")
 library(glmnet)
 summary(Fac_only_B_EN_non1$Joint_Count)
-glmmod <- glmnet(B, y=as.factor(Joint_Count), alpha=1, family="binomial")
+glmmod <- glmnet(B, y=as.factor(B$Joint_Count), alpha=1, family="binomial")
 
 ```
+
+```{r}
+PAC_ID_meds <- read.csv("PAC_ID_meds.csv")
+```
+
+```{r}
+PAC_ID_meds <- subset(PAC_ID_meds, select = -c(X))
+```
+
+```{r}
+View(PAC_ID_meds)
+```
+
+
+
+
 
